// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function contains complex 1`] = `
{
  "sql": "SELECT Foo.ID,Foo.a,Foo.b,Foo.c,Foo.x FROM Foo as Foo WHERE ifnull(instr((Foo.a,Foo.b),?),0)",
  "values": [
    "5",
  ],
}
`;

exports[`function fn with .xpr as argument 1`] = `
{
  "sql": "SELECT Foo.ID,Foo.a,Foo.b,Foo.c,Foo.x FROM Foo as Foo WHERE round(Foo.x - 100,3)",
  "values": [],
}
`;

exports[`function wrap xpr in concat functions in parentheses 1`] = `
{
  "sql": "SELECT 2023 || (8 * 2 - 0) as something FROM Foo as Foo",
  "values": [],
}
`;
